log/build_2024-10-09_11-57-57/kart/stderr.log
  File "/home/yolo/ros2-package/install/kart/lib/python3.10/site-packages/kart/main.py", line 42
    else
        ^
SyntaxError: expected ':'

